--- a/config_dir/config_nagano.JSON
+++ b/config_dir/config_nagano.JSON
@@ -1,6 +1,6 @@
 {
   "config_name": "nagano et. al old",
-  "data_dir": "../Data/nagano",
+  "data_dir": "/work/magroup/ruochiz/scHiC_Ren_next/Data/nagano",
   "temp_dir": "../Temp/nagano_old",
   "fig_dir": "../figs/nagano",
   "compartment_dir": "../compartment/nagano",
@@ -31,8 +31,9 @@
     "n_neighbors": 30
   },
   "cpu_num": -1,
-  "optional_smooth": false,
-  "optional_quantile": false,
+  "gpu_num": 8,
+  "optional_smooth": true,
+  "optional_quantile": true,
   "rank_thres": 1,
   "loss_mode": "rank"
 }
