--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,26 +1,67 @@
+{% set name = "higashi" %}
+{% set version = "0.2.0.2a4" %}
+
 package:
-  name: "higashi"
-  version: 0.2.0
-about:
-  summary: "Higashi: Multiscale and integrative scHi-C analysis"
+  name: "{{ name|lower }}"
+  version: "{{ version }}"
 
 source:
-  git_url: https://github.com/ma-compbio/Higashi.git
+  url: "https://test.pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+
 build:
-  script: python setup.py install
+  number: 0
+  script: "{{ PYTHON }} -m pip install . -vv"
+
 requirements:
-  run:
-    - python>=3.7.0
-    - h5py
-    - numpy
-    - pandas
-    - pytorch>=1.7.0
+  host:
+    - bokeh >=2.1.1
+    - cooler >=0.8
+    - cython >=0.29.24
     - fbpca
-    - scikit-learn>=0.23.2
+    - h5py
+    - numpy >=1.21.2
+    - pandas >=1.3.4
+    - pillow
+    - pip
+    - python >=3.9
+    - pytorch >=1.8
+    - scikit-learn >=0.23.2
+    - scipy >=1.7.3
+    - seaborn >=0.11.2
     - tqdm
-    - cooler>=0.8
-    - seaborn
-    - matplotlib
-    - umap-learn
-    - bokeh>=2.1.1
-    - Pillow
+    - umap-learn >=0.5
+  run:
+    - bokeh >=2.1.1
+    - cooler >=0.8
+    - cython >=0.29.24
+    - fbpca
+    - h5py
+    - numpy >=1.21.2
+    - pandas >=1.3.4
+    - pillow
+    - python >=3.9
+    - pytorch >=1.8
+    - scikit-learn >=0.23.2
+    - scipy >=1.7.3
+    - seaborn >=0.11.2
+    - tqdm
+    - umap-learn >=0.5
+
+test:
+  imports:
+    - higashi
+    - higashi.Higashi_analysis
+    - higashi.Higashi_backend
+
+about:
+  home: "https://github.com/ma-compbio/Higashi"
+  license: MIT
+  license_family: MIT
+  license_file:
+  summary: "Higashi: Multiscale and integrative scHi-C analysis"
+  doc_url:
+  dev_url:
+
+extra:
+  recipe-maintainers:
+    - your-github-id-here
