rename Code dir to higashi for conda packaging

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "higashi" %}
-{% set version = "0.2.0.2a4" %}
+{% set version = "0.1.0a0" %}
 
 package:
   name: "{{ name|lower }}"
   version: "{{ version }}"
 
 source:
-  url: "https://test.pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
-
+#  url: "https://test.pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  git-url:
 build:
   number: 0
   script: "{{ PYTHON }} -m pip install . -vv"
